--- a/estilo.css
+++ b/estilo.css
@@ -51,6 +51,7 @@ main {
     justify-content: center;
     padding: 2em;
     text-align: center;
+    margin-bottom: 180px;
 }
 
 
@@ -82,3 +83,6 @@ img {
 footer p {
     margin: 5px 0;
 }
+
+
+
