--- a/estilo.css
+++ b/estilo.css
@@ -51,7 +51,7 @@ main {
     justify-content: center;
     padding: 2em;
     text-align: center;
-    margin-bottom: 180px;
+    /*margin-bottom: 180px;*/
 }
 
 
@@ -84,5 +84,13 @@ footer p {
     margin: 5px 0;
 }
 
+main img {
+    width: 300px;  /* Define un ancho fijo */
+    height: 200px; /* Define un alto fijo */
+    object-fit: cover; /* Recorta la imagen para llenar el espacio sin distorsionarse */
+    border-radius: 10px; /* Bordes redondeados */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    margin-top: 15px;
+}
 
 
