--- a/estilo.css
+++ b/estilo.css
@@ -85,10 +85,10 @@ footer p {
 }
 
 main img {
-    width: 300px;  /* Define un ancho fijo */
-    height: 200px; /* Define un alto fijo */
-    object-fit: cover; /* Recorta la imagen para llenar el espacio sin distorsionarse */
-    border-radius: 10px; /* Bordes redondeados */
+    width: 300px; 
+    height: 200px; 
+    object-fit: cover; 
+    border-radius: 10px; 
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     margin-top: 15px;
 }
