--- a/contacto.css
+++ b/contacto.css
@@ -38,8 +38,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    justify-content: center; /* Centramos verticalmente */
-    align-items: center; /* Centramos horizontalmente */
+    justify-content: center;
+    align-items: center; 
 }
 
 
